2013-01-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, lib/oci8.rb.in: add languange mode to the extension
	    library name when ths ruby engine is rubinius and explicitly claim that
	    jruby is not supported when it is jruby.

2013-01-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/encoding.c, lib/oci8/encoding-init.rb: delete an internal method
	    OCI8.nls_ratio= when the ruby is 1.9 or greater. nls_ratio is set by
	    OCI8.encoding=.

2012-12-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c, test/test_clob.rb:
	    fix SEGV when a temporary LOB is freed when OCILobRead returns OCI_NEED_DATA.
	    (github issue #20 reported by Edgars Beigarts)

2012-12-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, lib/oci8/oci8.rb: change the OCIError constructor to
	    accept an Oracle error code as the first parameter and create a message
	    which depends on NLS_LANG.
	* lib/oci8/metadata.rb: fix OCI8.describe_table not to follow synonyms
	    until stack overflow. Now the recursive level is limited to 20.
	    (github issue #26 reported by Brian Henderson)

2012-12-16  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, lib/oci8.rb.in: use RUBY_VERSION instead of
	   RbConfig::CONFIG['ruby_version'] to know the ruby ABI version.
	   The latter may be changed by the configure option --with-ruby-version.
	   (github issue #24 reported by suhrawardi)

2012-12-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: add a script encoding magic comment for ruby 2.0.0 preview2.
	    (github issue #25 reported by aboltart)

2012-12-02  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_encoding.rb: fix to pass tests with ruby 2.0.0 preview2.

2012-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: use OCILobLocatorAssign_nb (non-blocking version)
	    instead of OCILobLocatorAssign (blocking version).

2012-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.3 and 2.1.2